entrega1/src/PatitoParser.py
# Generated from Patito.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PatitoParser ( Parser ):

    grammarFileName = "Patito.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'entero'", "'flotante'", "'('", "')'", 
                     "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'!='", "'=='", 
                     "'='", "';'", "','", "'escribe'", "'entrada'", "'regresa'", 
                     "'si'", "'sino'", "'mientras'", "'haz'", "'['", "']'", 
                     "'{'", "'}'", "'vars'", "':'", "'nula'", "'programa'", 
                     "'inicio'", "'fin'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "CTE_FLOT", "CTE_ENT", "ID", "LETRERO", 
                      "WS" ]

    RULE_tipo = 0
    RULE_cte = 1
    RULE_factor = 2
    RULE_termino = 3
    RULE_exp = 4
    RULE_expresion = 5
    RULE_asigna = 6
    RULE_llamada = 7
    RULE_imprime = 8
    RULE_entrada = 9
    RULE_regresa = 10
    RULE_condicion = 11
    RULE_ciclo = 12
    RULE_estatuto = 13
    RULE_cuerpo = 14
    RULE_vars = 15
    RULE_funcs = 16
    RULE_programa = 17

    ruleNames =  [ "tipo", "cte", "factor", "termino", "exp", "expresion", 
                   "asigna", "llamada", "imprime", "entrada", "regresa", 
                   "condicion", "ciclo", "estatuto", "cuerpo", "vars", "funcs", 
                   "programa" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    CTE_FLOT=33
    CTE_ENT=34
    ID=35
    LETRERO=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PatitoParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = PatitoParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CTE_ENT(self):
            return self.getToken(PatitoParser.CTE_ENT, 0)

        def CTE_FLOT(self):
            return self.getToken(PatitoParser.CTE_FLOT, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_cte

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCte" ):
                listener.enterCte(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCte" ):
                listener.exitCte(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCte" ):
                return visitor.visitCte(self)
            else:
                return visitor.visitChildren(self)




    def cte(self):

        localctx = PatitoParser.CteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_cte)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            _la = self._input.LA(1)
            if not(_la==33 or _la==34):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def cte(self):
            return self.getTypedRuleContext(PatitoParser.CteContext,0)


        def llamada(self):
            return self.getTypedRuleContext(PatitoParser.LlamadaContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = PatitoParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_factor)
        self._la = 0 # Token type
        try:
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.match(PatitoParser.T__2)
                self.state = 41
                self.expresion()
                self.state = 42
                self.match(PatitoParser.T__3)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==5 or _la==6:
                    self.state = 44
                    _la = self._input.LA(1)
                    if not(_la==5 or _la==6):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 49
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [35]:
                    self.state = 47
                    self.match(PatitoParser.ID)
                    pass
                elif token in [33, 34]:
                    self.state = 48
                    self.cte()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.llamada()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.FactorContext)
            else:
                return self.getTypedRuleContext(PatitoParser.FactorContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_termino

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermino" ):
                listener.enterTermino(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermino" ):
                listener.exitTermino(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermino" ):
                return visitor.visitTermino(self)
            else:
                return visitor.visitChildren(self)




    def termino(self):

        localctx = PatitoParser.TerminoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_termino)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.factor()
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7 or _la==8:
                self.state = 55
                _la = self._input.LA(1)
                if not(_la==7 or _la==8):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 56
                self.factor()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termino(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.TerminoContext)
            else:
                return self.getTypedRuleContext(PatitoParser.TerminoContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = PatitoParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_exp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.termino()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==6:
                self.state = 63
                _la = self._input.LA(1)
                if not(_la==5 or _la==6):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 64
                self.termino()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.ExpContext)
            else:
                return self.getTypedRuleContext(PatitoParser.ExpContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresion" ):
                return visitor.visitExpresion(self)
            else:
                return visitor.visitChildren(self)




    def expresion(self):

        localctx = PatitoParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expresion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.exp()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 7680) != 0):
                self.state = 71
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7680) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 72
                self.exp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_asigna

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsigna" ):
                listener.enterAsigna(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsigna" ):
                listener.exitAsigna(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsigna" ):
                return visitor.visitAsigna(self)
            else:
                return visitor.visitChildren(self)




    def asigna(self):

        localctx = PatitoParser.AsignaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_asigna)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(PatitoParser.ID)
            self.state = 76
            self.match(PatitoParser.T__12)
            self.state = 77
            self.expresion()
            self.state = 78
            self.match(PatitoParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LlamadaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(PatitoParser.ExpresionContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_llamada

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLlamada" ):
                listener.enterLlamada(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLlamada" ):
                listener.exitLlamada(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLlamada" ):
                return visitor.visitLlamada(self)
            else:
                return visitor.visitChildren(self)




    def llamada(self):

        localctx = PatitoParser.LlamadaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_llamada)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(PatitoParser.ID)
            self.state = 81
            self.match(PatitoParser.T__2)
            self.state = 82
            self.expresion()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 83
                self.match(PatitoParser.T__14)
                self.state = 84
                self.expresion()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(PatitoParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(PatitoParser.ExpresionContext,i)


        def LETRERO(self, i:int=None):
            if i is None:
                return self.getTokens(PatitoParser.LETRERO)
            else:
                return self.getToken(PatitoParser.LETRERO, i)

        def getRuleIndex(self):
            return PatitoParser.RULE_imprime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImprime" ):
                listener.enterImprime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImprime" ):
                listener.exitImprime(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImprime" ):
                return visitor.visitImprime(self)
            else:
                return visitor.visitChildren(self)




    def imprime(self):

        localctx = PatitoParser.ImprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_imprime)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(PatitoParser.T__15)
            self.state = 93
            self.match(PatitoParser.T__2)
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 5, 6, 33, 34, 35]:
                self.state = 94
                self.expresion()
                pass
            elif token in [36]:
                self.state = 95
                self.match(PatitoParser.LETRERO)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 98
                self.match(PatitoParser.T__14)
                self.state = 101
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3, 5, 6, 33, 34, 35]:
                    self.state = 99
                    self.expresion()
                    pass
                elif token in [36]:
                    self.state = 100
                    self.match(PatitoParser.LETRERO)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(PatitoParser.T__3)
            self.state = 109
            self.match(PatitoParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntradaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_entrada

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntrada" ):
                listener.enterEntrada(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntrada" ):
                listener.exitEntrada(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntrada" ):
                return visitor.visitEntrada(self)
            else:
                return visitor.visitChildren(self)




    def entrada(self):

        localctx = PatitoParser.EntradaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_entrada)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(PatitoParser.T__16)
            self.state = 112
            self.match(PatitoParser.T__2)
            self.state = 113
            self.match(PatitoParser.ID)
            self.state = 114
            self.match(PatitoParser.T__3)
            self.state = 115
            self.match(PatitoParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegresaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_regresa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegresa" ):
                listener.enterRegresa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegresa" ):
                listener.exitRegresa(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegresa" ):
                return visitor.visitRegresa(self)
            else:
                return visitor.visitChildren(self)




    def regresa(self):

        localctx = PatitoParser.RegresaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_regresa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(PatitoParser.T__17)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 60129542248) != 0):
                self.state = 118
                self.expresion()


            self.state = 121
            self.match(PatitoParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def cuerpo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.CuerpoContext)
            else:
                return self.getTypedRuleContext(PatitoParser.CuerpoContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion" ):
                listener.enterCondicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion" ):
                listener.exitCondicion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicion" ):
                return visitor.visitCondicion(self)
            else:
                return visitor.visitChildren(self)




    def condicion(self):

        localctx = PatitoParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_condicion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(PatitoParser.T__18)
            self.state = 124
            self.match(PatitoParser.T__2)
            self.state = 125
            self.expresion()
            self.state = 126
            self.match(PatitoParser.T__3)
            self.state = 127
            self.cuerpo()
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 128
                self.match(PatitoParser.T__19)
                self.state = 129
                self.cuerpo()


            self.state = 132
            self.match(PatitoParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CicloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def cuerpo(self):
            return self.getTypedRuleContext(PatitoParser.CuerpoContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_ciclo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCiclo" ):
                listener.enterCiclo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCiclo" ):
                listener.exitCiclo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCiclo" ):
                return visitor.visitCiclo(self)
            else:
                return visitor.visitChildren(self)




    def ciclo(self):

        localctx = PatitoParser.CicloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ciclo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(PatitoParser.T__20)
            self.state = 135
            self.match(PatitoParser.T__2)
            self.state = 136
            self.expresion()
            self.state = 137
            self.match(PatitoParser.T__3)
            self.state = 138
            self.match(PatitoParser.T__21)
            self.state = 139
            self.cuerpo()
            self.state = 140
            self.match(PatitoParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstatutoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asigna(self):
            return self.getTypedRuleContext(PatitoParser.AsignaContext,0)


        def condicion(self):
            return self.getTypedRuleContext(PatitoParser.CondicionContext,0)


        def ciclo(self):
            return self.getTypedRuleContext(PatitoParser.CicloContext,0)


        def llamada(self):
            return self.getTypedRuleContext(PatitoParser.LlamadaContext,0)


        def imprime(self):
            return self.getTypedRuleContext(PatitoParser.ImprimeContext,0)


        def entrada(self):
            return self.getTypedRuleContext(PatitoParser.EntradaContext,0)


        def regresa(self):
            return self.getTypedRuleContext(PatitoParser.RegresaContext,0)


        def estatuto(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.EstatutoContext)
            else:
                return self.getTypedRuleContext(PatitoParser.EstatutoContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_estatuto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstatuto" ):
                listener.enterEstatuto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstatuto" ):
                listener.exitEstatuto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstatuto" ):
                return visitor.visitEstatuto(self)
            else:
                return visitor.visitChildren(self)




    def estatuto(self):

        localctx = PatitoParser.EstatutoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_estatuto)
        self._la = 0 # Token type
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.asigna()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.condicion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.ciclo()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 145
                self.llamada()
                self.state = 146
                self.match(PatitoParser.T__13)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 148
                self.imprime()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 149
                self.entrada()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 150
                self.regresa()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 151
                self.match(PatitoParser.T__22)
                self.state = 153 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 152
                    self.estatuto()
                    self.state = 155 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 34371207168) != 0)):
                        break

                self.state = 157
                self.match(PatitoParser.T__23)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CuerpoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def estatuto(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.EstatutoContext)
            else:
                return self.getTypedRuleContext(PatitoParser.EstatutoContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_cuerpo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCuerpo" ):
                listener.enterCuerpo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCuerpo" ):
                listener.exitCuerpo(self)
